# hex_test2

./: .gitignore  CMakeLists.txt  main.cpp  save_buffer.txt  save_buffer2.txt
install/include/mavsdk/mavlink/v2.0/common/: mavlink.h
install/include/mavsdk/mavlink/v2.0/minimal/: mavlink.h  minimal.h  version.h
install/mavsdk/include/mavsdk/mavlink/v2.0/common/: common.h  version.h
install/mavsdk/lib/cmake/MAVSDK/: MAVSDKTargets-debug.cmake  MAVSDKTargets.cmake
install/mavsdk/lib/pkgconfig/: mavsdk.pc
install/sdlsdk/sdl/: SDL2d.lib
